--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  ulid: ^2.0.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -88,3 +92,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+assets:
+   - .env.development
+   - .env.production
+
