--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.2
   ulid: ^2.0.0
   path: ^1.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
