--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.9.0
   shared_preferences: ^2.2.2
   intl: ^0.19.0
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
