--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.2.2
   intl: ^0.19.0
   flutter_riverpod: ^2.5.1
+  http: ^1.2.1
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
