--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   dio: ^5.4.1
   csv: ^6.0.0
   url_launcher: ^6.2.5
+  firebase_core: ^2.27.1
+  firebase_analytics: ^10.8.10
+  hooks_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
