--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.4.1
   csv: ^6.0.0
   url_launcher: ^6.2.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,16 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+# iconの設定
+flutter_icons:
+  ios: true
+  image_path: "assets/logo/wasedaconnect.png"
+  remove_alpha_ios: true
+  android: true
+  adaptive_icon_background: "assets/logo/WasedaConnect_ios.png"
+  adaptive_icon_foreground: "assets/logo/WasedaConnect_ios.png"
+
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -101,3 +112,6 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/
+    - assets/logo/WasedaConnect.png
+
+
