現在の時間から時間割を目立たせる

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: rondeBfont
+      fonts:
+        - asset: assets/fonts/Ronde-B_square.otf
+          weight: 700
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -119,6 +125,6 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/
-    - assets/logo/WasedaConnect.png
+    - assets/logo/wasedaconnect.png
 
 
