--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCJfJbDR3x9smuya8ZSa_VpeZ5ZhxB3_Ig</string>
+	<string>AIzaSyDx1PzWC-ZHVmw9TcD0dZfSV8cen9QsLdA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>229447664218</string>
+	<string>1051911712828</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.wasedaConnect</string>
+	<string>com.name.wasedaconnect</string>
 	<key>PROJECT_ID</key>
-	<string>waseda-connect</string>
+	<string>wasedaconnect</string>
 	<key>STORAGE_BUCKET</key>
-	<string>waseda-connect.appspot.com</string>
+	<string>wasedaconnect.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:229447664218:ios:5fbc629b207d78cff8ce63</string>
+	<string>1:1051911712828:ios:106550ee6824af7ca9d339</string>
 </dict>
 </plist>
